--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -1628,7 +1628,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4lJ-KX-VMp">
-                                <rect key="frame" x="0.0" y="516" width="414" height="171"/>
+                                <rect key="frame" x="0.0" y="476" width="414" height="211"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyRoamniMyProfileTableViewCell" rowHeight="40" id="uQz-TX-dxq" customClass="MyRoamniMyProfileTableViewCell" customModule="Roamni" customModuleProvider="target">
@@ -1668,14 +1668,14 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 </connections>
                             </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Roamni" translatesAutoresizingMaskIntoConstraints="NO" id="GR7-y1-RSE">
-                                <rect key="frame" x="20" y="107" width="80" height="80"/>
+                                <rect key="frame" x="20" y="67" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="2xb-pP-PR3"/>
                                     <constraint firstAttribute="height" constant="80" id="aoN-zE-3uf"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bluetable" translatesAutoresizingMaskIntoConstraints="NO" id="d3P-tv-X5r">
-                                <rect key="frame" x="0.0" y="191" width="414" height="1"/>
+                                <rect key="frame" x="0.0" y="151" width="414" height="1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="YPH-3q-oZk"/>
                                 </constraints>
@@ -1692,7 +1692,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About me:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bl8-Cg-7Ub">
-                                <rect key="frame" x="20" y="200" width="98" height="21"/>
+                                <rect key="frame" x="20" y="160" width="98" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="98" id="F2a-vW-OF9"/>
                                 </constraints>
@@ -1701,13 +1701,13 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qB3-Ai-nkI">
-                                <rect key="frame" x="34" y="319" width="66" height="21"/>
+                                <rect key="frame" x="34" y="279" width="66" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-dk-Ztt">
-                                <rect key="frame" x="0.0" y="342" width="414" height="92"/>
+                                <rect key="frame" x="0.0" y="302" width="414" height="92"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="92" id="2D7-Fc-pPX"/>
                                 </constraints>
@@ -1717,7 +1717,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 </connections>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tours Uploaded:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IB4-AC-Onc">
-                                <rect key="frame" x="34" y="442" width="137" height="21"/>
+                                <rect key="frame" x="34" y="402" width="137" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="137" id="SEw-FW-3xz"/>
                                 </constraints>
@@ -1726,7 +1726,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHC-xK-tGf">
-                                <rect key="frame" x="179" y="443.66666666666674" width="92" height="19.333333333333314"/>
+                                <rect key="frame" x="179" y="403.66666666666674" width="92" height="19.333333333333314"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="92" id="Col-be-qRC"/>
                                 </constraints>
@@ -1735,13 +1735,13 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uploaded Tours &amp; Reviews:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dG-W8-ZhS">
-                                <rect key="frame" x="34" y="471" width="209" height="21"/>
+                                <rect key="frame" x="34" y="431" width="209" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tour Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2Z-ZO-6HF">
-                                <rect key="frame" x="87" y="494" width="76" height="21"/>
+                                <rect key="frame" x="87" y="454" width="76" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="4BY-eA-Gzd"/>
                                     <constraint firstAttribute="width" constant="76" id="ANv-VA-xzD"/>
@@ -1785,6 +1785,13 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDm-OB-X4D">
+                                <rect key="frame" x="129" y="279" width="163" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -1819,7 +1826,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="My Profile" id="mXj-7D-73s">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="edit" id="ue0-g9-cci">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="ue0-g9-cci">
                             <connections>
                                 <action selector="done:" destination="jLj-8J-qNf" id="iyt-GD-5Ah"/>
                             </connections>
@@ -1827,6 +1834,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                     </navigationItem>
                     <connections>
                         <outlet property="aboutme" destination="60x-Je-LOf" id="dXn-JA-yCU"/>
+                        <outlet property="countryLabel" destination="NDm-OB-X4D" id="oJi-xc-RgY"/>
                         <outlet property="countryPicker" destination="ZWe-dk-Ztt" id="hgR-rY-MFp"/>
                         <outlet property="firstname" destination="Mlh-ya-AdA" id="Wro-SI-Tc1"/>
                         <outlet property="lastname" destination="VDR-5o-xm2" id="HhN-wY-vLW"/>
@@ -1839,7 +1847,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UtG-ud-FNO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1134.7826086956522" y="-574.72826086956525"/>
+            <point key="canvasLocation" x="971.01449275362324" y="-634.23913043478262"/>
         </scene>
         <!--Setting-->
         <scene sceneID="kjS-uu-5Hv">
@@ -1881,6 +1889,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="name" destination="zIC-sI-Lnp" id="4Jb-GQ-tg1"/>
+                                    <outlet property="userImage" destination="Uya-5Y-ya9" id="tpy-ix-xBB"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MyRoamniSettingPaymentTableViewCell" rowHeight="50" id="pvl-ch-Fzp" customClass="MyRoamniSettingPaymentTableViewCell" customModule="Roamni" customModuleProvider="target">
@@ -1962,7 +1971,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZEn-jH-cQq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3301.5999999999999" y="831.63418290854577"/>
+            <point key="canvasLocation" x="3099" y="792"/>
         </scene>
         <!--Incoming Tours-->
         <scene sceneID="hdM-Xt-RUm">
@@ -3408,7 +3417,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Roamni Stats:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3E-tA-Nan">
-                                <rect key="frame" x="14" y="69" width="193" height="29"/>
+                                <rect key="frame" x="14" y="109" width="193" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="XAU-JL-Yqv"/>
                                     <constraint firstAttribute="width" constant="193" id="p1B-Sn-noK"/>
